fixed overflow from desktop bg svg

--- a/easybank/src/app/globals.css
+++ b/easybank/src/app/globals.css
@@ -20,14 +20,14 @@
   margin: 0;
   font-family: "Public Sans", sans-serif;
   font-size: 1.5rem;
+  overflow-x: clip;
 }
 
 html,
 body {
-  max-width: 100vw;
+  /* max-width: 100vw; */
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
 }
 
 a {
